--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/jordanfin/server#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
