--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ NODE_ENV=development
 AMBIENTE=development
 SERVER_HOSTNAME=127.0.0.1
 SERVER_PORT=5000
+ML_API_ITEMS=https://api.mercadolibre.com/sites/MLA/search?q=
+ML_API_ITEM_DETAIL=https://api.mercadolibre.com/items/
 PKDIR=/etc/letsencrypt/live/apitest.cobrar.ar/privkey.pem
 CERTDIR=/etc/letsencrypt/live/apitest.cobrar.ar/cert.pem
 CADIR=/etc/letsencrypt/live/apitest.cobrar.ar/chain.pem
