--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.21.0",
     "cors": "^2.8.5",
     "env-cmd": "^10.1.0",
+    "nodemon": "^2.0.6",
     "express": "^4.17.1",
     "fs": "0.0.1-security"
   }
